--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "CraZyBaLL/BDD",
+    "name": "crazyball/bdd",
     "description": "Atelier BDD",
     "type": "project",
     "require-dev": {
